crates/glyph-cli/tests/corpus/invalid/applies_on_non_block.glyph
const some_text = "This is a const declaration, not a block."

skill main()
    description: "Main skill."
    flow:
        if some_text.applies()
            "Do something."
